# robo-manim-add-ons

./: .gitignore  API.md  DEMOS_INDEX.md  README.md  SETUP_GUIDE.md  build-and-upload.sh  generate-docs-video.sh  pyproject.toml  requirements.txt  setup.py
.claude/: claude.md  settings.local.json
.github/workflows/: deploy-docs.yml
demos/: README.md
demos/annotation/: INDEX.md  README.md  annotation_demo.py  hatched_region_demo.py  label_demo.py
demos/arrows/: INDEX.md  README.md  arrow_demo.py
demos/exp/: INDEX.md  exp_demo.py
demos/geometry/: INDEX.md  README.md  dynamic_geometry_demo.py  geometry_demo.py
demos/graphing/: graph_demo.py  trig_graph_demo.py
demos/intersection/: INDEX.md  README.md  intersection_demo.py
demos/labels/: INDEX.md  README.md  dynamic_labels_demo.py
demos/transform/: README.md
demos/vectors/: INDEX.md  README.md  backward_vector_demo.py  combined_vector_operations_demo.py  forward_vector_demo.py  perp_move_demo.py  vector_addition_demo.py  vector_decomposition_demo.py  vector_parallelogram_demo.py  vector_projection_demo.py  vector_subtraction_demo.py
docs/: API.html  API.md  README.md  SETUP.md  _config.yml  annotation.html  arrows.html  exp.html  geometry.html  index.html  index.md  intersection.html  labels.html  transform.html  vectors.html
docs/api/: index.md
docs/examples/: index.md
examples/: arrow_utils_demo.py  demo.py
robo_manim_add_ons/: USAGE.md  __init__.py  annotation_utils.py  arrow_tips.py  arrow_utils.py  custom_mobjects.py  custom_objects.py  exp_utils.py  geometry_utils.py  graph_utils.py  intersection_utils.py  label_utils.py  point_utils.py  rogebra_scene.py  shape_utils.py  style_utils.py  text_utils.py  transform_utils.py  vector_utils.py
scripts/: convert_api_md_to_html.py  generate_docs.py  render_all_demos.sh  render_exp_demos.sh  render_graph_demos.sh  render_vector_demos.sh  render_vectors.sh
tests/: __init__.py  test_annotation_utils.py  test_custom_mobjects.py  test_geometry_utils.py  test_intersection_utils.py  test_label_utils.py  test_transform_utils.py  test_vector_utils.py
(+27 files in other folders)
